--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
                     placeholder="20">
             </div>
         </div>
-        <div class="leaderboard" style="display: none;"> лидерборд </div>
+        <div class="leaderboard" style="display: none;"> Лидерборд: </div>
+        <div class="winner" style="display: none;"> Победитель: </div>
         <div class="guessing">
             <div class="last-words"></div>
             <div class="best-match"></div>
         </div>
     </div>
     <script src="js/ws.js"></script>
-    <script src="js/kontekstno.js"></script>
     <script src="js/init.js"></script>
 </body>
 
