временно скрыть ненужную настроку

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                 <div class="title">Перезапуск игры после победы (секунды)</div>
                 <input type="text" id="restart-time" name="restart_time" placeholder="20">
             </div>
-            <div class="setting">
+            <!-- <div class="setting">
                 <div class="title">Поле для добавления слова</div>
                 <input type="checkbox" id="allow-add-word-checkbox" name="allow-add-word">
-            </div>
+            </div> -->
             <div class="setting">
                 <button id="save-settings-btn">Сохранить</button>
             </div>
