--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
     <script src="js/init.js"></script>
     <script src="js/confetti.js"></script>
     <script src="js/analytics.js"></script>
+    <!-- test deploy on gh pages -->
 </body>
 
 </html>
