--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -100,9 +100,11 @@
             <div class="best-match"></div>
         </section>
     </div>
-    <div style="margin-top: 20px; display: none;">
-        <button id="test-win-btn">Тест победы</button>
-    </div>
+    <footer class="main page-width">
+        <a class="github-link" href="https://github.com/AnnaCodit/Slovotron" target="_blank">
+            <img src="img/github.png" alt="GitHub">
+        </a>
+    </footer>
     <!-- Все основные скрипты -->
     <script src="js/ws.js"></script>
     <script src="js/leaderboard.js"></script>
