рефакторинг работы с апи и начало реализации подсказок (промежуточный коммит)

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
     <!-- Все основные скрипты -->
     <script src="js/ws.js"></script>
     <script src="js/leaderboard.js"></script>
+    <script src="js/tips.js"></script>
     <script src="js/init.js"></script>
     <script src="js/confetti.js"></script>
     <script src="js/analytics.js"></script>
