Enhance winner block styling

--- a/index.html
+++ b/index.html
@@ -91,6 +91,14 @@
             </div>
         </section>
         <section id="winner" style="display: none;">
+            <div class="winner-effects" aria-hidden="true">
+                <span class="effect star">⭐</span>
+                <span class="effect trophy">🏆</span>
+                <span class="effect spark">✨</span>
+                <span class="effect crown">👑</span>
+                <span class="effect confetti">🎉</span>
+                <span class="effect rocket">🚀</span>
+            </div>
             <div class="title">Победитель: </div>
             <div class="content">
                 <img src="https://placecats.com/300/300" alt="" id="winner-avatar">
