Переключатель класса и label для чекбокса

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <input type="number" id="restart-time" name="restart_time" placeholder="20" min="0">
             </div>
             <div class="setting checkbox-container">
-                <div class="title">Показывать аватарку победителя?</div>
+                <label class="title" for="win-avatar-enable">Показывать аватарку победителя?</label>
                 <div>
                     <input type="checkbox" id="win-avatar-enable">
                 </div>
