--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Словотрон 9000</title>
     <link rel="icon" href="favicon.ico">
-    <link rel="stylesheet" href="css/style.css?v={{ site.time | date: '%s' }}">
+    <link rel="stylesheet" href="css/style.css?v=__ASSETS_VERSION__">
     <!-- Система отслеживания ошибок фронтэнда Sentry. В будущем можно попробовать еще LogRocket -->
     <script src="https://js.sentry-cdn.com/d96be4f9b0094010cb3a23e45d5e4bf6.min.js" crossorigin="anonymous"></script>
     <!-- Взаимодействие с твичом -->
@@ -124,12 +124,12 @@
         </a>
     </footer>
     <!-- Все основные скрипты -->
-    <script src="js/ws.js?v={{ site.time | date: '%s' }}"></script>
-    <script src="js/leaderboard.js?v={{ site.time | date: '%s' }}"></script>
-    <script src="js/tips.js?v={{ site.time | date: '%s' }}"></script>
-    <script src="js/init.js?v={{ site.time | date: '%s' }}"></script>
-    <script src="js/confetti.js?v={{ site.time | date: '%s' }}"></script>
-    <script src="js/analytics.js?v={{ site.time | date: '%s' }}"></script>
+    <script src="js/ws.js?v=__ASSETS_VERSION__"></script>
+    <script src="js/leaderboard.js?v=__ASSETS_VERSION__"></script>
+    <script src="js/tips.js?v=__ASSETS_VERSION__"></script>
+    <script src="js/init.js?v=__ASSETS_VERSION__"></script>
+    <script src="js/confetti.js?v=__ASSETS_VERSION__"></script>
+    <script src="js/analytics.js?v=__ASSETS_VERSION__"></script>
 </body>
 
 </html>
