--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <section id="winner" style="display: none;">
             <div class="title">Победитель: </div>
             <div class="content">
-                <img src="img/1x1.png" alt="" id="winner-avatar">
+                <img alt="" id="winner-avatar">
                 <div class="winner-name"></div>
             </div>
         </section>
